(executables
 (names celestial_globe_adaptation)
 (libraries js_of_ocaml-lwt)
 (modes js wasm)
 (js_of_ocaml
  (flags :standard))
 (preprocess
  (pps js_of_ocaml-ppx)))

(alias
 (name default)
 (deps celestial_globe_adaptation.bc.js index.html))

(alias
 (name default)
 (enabled_if %{env:WASM_OF_OCAML=false})
 (deps celestial_globe_adaptation.bc.wasm.js index-wasm.html))

(env
  (dev
    (flags (:standard -g -w -16 -w -32 -w -52 -w -21 -w -26 -w -27 -w -37 -w -11 -w -33))
    (js_of_ocaml
     (compilation_mode whole_program)
     (flags --pretty --disable genprim --noinline --debug-info)
     ) 
  )
)
