(executables
 (names webglglobe)
 (libraries js_of_ocaml-lwt)
 (modes js wasm)
 (preprocess
  (pps js_of_ocaml-ppx)))

(alias
 (name default)
 (deps webglglobe.bc.js index.html))

(alias
 (name default)
 (enabled_if %{env:WASM_OF_OCAML=false})
 (deps webglglobe.bc.wasm.js index-wasm.html))

(env
  (dev
    (flags (:standard -g -w -26 -w -27 -w -32 -w -69))
    (js_of_ocaml
     (compilation_mode whole_program)
     (flags --pretty --disable genprim --noinline --debug-info)
     ) 
  )
)
