(executable
 (name webgl_tabbed_dialog)
 (libraries unix js_of_ocaml js_of_ocaml-lwt js_of_ocaml-tyxml)
 (preprocess (pps js_of_ocaml-ppx))
 (modes js))

(alias
 (name default)
 (deps webgl_tabbed_dialog.bc.js))

(env
  (dev
    (flags (:standard -g -w -16 -w -32 -w -52 -w -21 -w -26 -w -27 -w -37 -w -11 -w -33))
    (js_of_ocaml
     (compilation_mode whole_program)
     (flags --pretty --disable genprim --noinline --debug-info)
     ) 
  )
)
